--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "joi-browser": "^13.4.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
