--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^4.6.1",
-    "joi-browser": "^13.4.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
